--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -20,6 +20,7 @@ extra-source-files:
     test_resources/daily-bysetpos.smos
     test_resources/daily-bysetpos.unresolved
     test_resources/daily-bysetpos.utcevents
+    test_resources/daily-bysetpos.zones
     test_resources/date.config
     test_resources/date.events
     test_resources/date.ics
@@ -28,6 +29,7 @@ extra-source-files:
     test_resources/date.smos
     test_resources/date.unresolved
     test_resources/date.utcevents
+    test_resources/date.zones
     test_resources/duration-time.config
     test_resources/duration-time.events
     test_resources/duration-time.ics
@@ -36,6 +38,7 @@ extra-source-files:
     test_resources/duration-time.smos
     test_resources/duration-time.unresolved
     test_resources/duration-time.utcevents
+    test_resources/duration-time.zones
     test_resources/duration-weeks.config
     test_resources/duration-weeks.events
     test_resources/duration-weeks.ics
@@ -44,6 +47,7 @@ extra-source-files:
     test_resources/duration-weeks.smos
     test_resources/duration-weeks.unresolved
     test_resources/duration-weeks.utcevents
+    test_resources/duration-weeks.zones
     test_resources/duration.config
     test_resources/duration.events
     test_resources/duration.ics
@@ -52,6 +56,7 @@ extra-source-files:
     test_resources/duration.smos
     test_resources/duration.unresolved
     test_resources/duration.utcevents
+    test_resources/duration.zones
     test_resources/empty.config
     test_resources/empty.events
     test_resources/empty.ics
@@ -60,6 +65,7 @@ extra-source-files:
     test_resources/empty.smos
     test_resources/empty.unresolved
     test_resources/empty.utcevents
+    test_resources/empty.zones
     test_resources/example.config
     test_resources/example.events
     test_resources/example.ics
@@ -68,6 +74,7 @@ extra-source-files:
     test_resources/example.smos
     test_resources/example.unresolved
     test_resources/example.utcevents
+    test_resources/example.zones
     test_resources/exception.config
     test_resources/exception.events
     test_resources/exception.ics
@@ -76,6 +83,7 @@ extra-source-files:
     test_resources/exception.smos
     test_resources/exception.unresolved
     test_resources/exception.utcevents
+    test_resources/exception.zones
     test_resources/ignored.config
     test_resources/ignored.events
     test_resources/ignored.ics
@@ -84,6 +92,7 @@ extra-source-files:
     test_resources/ignored.smos
     test_resources/ignored.unresolved
     test_resources/ignored.utcevents
+    test_resources/ignored.zones
     test_resources/minimal.config
     test_resources/minimal.events
     test_resources/minimal.ics
@@ -92,6 +101,7 @@ extra-source-files:
     test_resources/minimal.smos
     test_resources/minimal.unresolved
     test_resources/minimal.utcevents
+    test_resources/minimal.zones
     test_resources/museum.config
     test_resources/museum.events
     test_resources/museum.ics
@@ -100,6 +110,7 @@ extra-source-files:
     test_resources/museum.smos
     test_resources/museum.unresolved
     test_resources/museum.utcevents
+    test_resources/museum.zones
     test_resources/one-recurrence-invalid.config
     test_resources/one-recurrence-invalid.events
     test_resources/one-recurrence-invalid.ics
@@ -108,6 +119,7 @@ extra-source-files:
     test_resources/one-recurrence-invalid.smos
     test_resources/one-recurrence-invalid.unresolved
     test_resources/one-recurrence-invalid.utcevents
+    test_resources/one-recurrence-invalid.zones
     test_resources/rdate-period.config
     test_resources/rdate-period.events
     test_resources/rdate-period.ics
@@ -116,6 +128,7 @@ extra-source-files:
     test_resources/rdate-period.smos
     test_resources/rdate-period.unresolved
     test_resources/rdate-period.utcevents
+    test_resources/rdate-period.zones
     test_resources/rdate.config
     test_resources/rdate.events
     test_resources/rdate.ics
@@ -124,6 +137,7 @@ extra-source-files:
     test_resources/rdate.smos
     test_resources/rdate.unresolved
     test_resources/rdate.utcevents
+    test_resources/rdate.zones
     test_resources/rest-day.config
     test_resources/rest-day.events
     test_resources/rest-day.ics
@@ -132,6 +146,7 @@ extra-source-files:
     test_resources/rest-day.smos
     test_resources/rest-day.unresolved
     test_resources/rest-day.utcevents
+    test_resources/rest-day.zones
     test_resources/uid.config
     test_resources/uid.events
     test_resources/uid.ics
@@ -140,6 +155,7 @@ extra-source-files:
     test_resources/uid.smos
     test_resources/uid.unresolved
     test_resources/uid.utcevents
+    test_resources/uid.zones
     test_resources/visit.config
     test_resources/visit.events
     test_resources/visit.ics
@@ -148,6 +164,7 @@ extra-source-files:
     test_resources/visit.smos
     test_resources/visit.unresolved
     test_resources/visit.utcevents
+    test_resources/visit.zones
     test_resources/zoned-border.config
     test_resources/zoned-border.events
     test_resources/zoned-border.ics
@@ -156,6 +173,7 @@ extra-source-files:
     test_resources/zoned-border.smos
     test_resources/zoned-border.unresolved
     test_resources/zoned-border.utcevents
+    test_resources/zoned-border.zones
     test_resources/zoned-complex.config
     test_resources/zoned-complex.events
     test_resources/zoned-complex.ics
@@ -164,6 +182,7 @@ extra-source-files:
     test_resources/zoned-complex.smos
     test_resources/zoned-complex.unresolved
     test_resources/zoned-complex.utcevents
+    test_resources/zoned-complex.zones
     test_resources/zoned-rdate.config
     test_resources/zoned-rdate.events
     test_resources/zoned-rdate.ics
@@ -172,6 +191,7 @@ extra-source-files:
     test_resources/zoned-rdate.smos
     test_resources/zoned-rdate.unresolved
     test_resources/zoned-rdate.utcevents
+    test_resources/zoned-rdate.zones
     test_resources/zoned-recurring.config
     test_resources/zoned-recurring.events
     test_resources/zoned-recurring.ics
@@ -180,6 +200,7 @@ extra-source-files:
     test_resources/zoned-recurring.smos
     test_resources/zoned-recurring.unresolved
     test_resources/zoned-recurring.utcevents
+    test_resources/zoned-recurring.zones
     test_resources/zoned.config
     test_resources/zoned.events
     test_resources/zoned.ics
@@ -188,6 +209,7 @@ extra-source-files:
     test_resources/zoned.smos
     test_resources/zoned.unresolved
     test_resources/zoned.utcevents
+    test_resources/zoned.zones
 
 library
   exposed-modules:
@@ -283,10 +305,12 @@ test-suite smos-calendar-import-test
     , genvalidity-text
     , ical
     , ical-gen
+    , ical-recurrence
     , ical-recurrence-gen
     , path
     , path-io
     , smos-calendar-import
+    , smos-data
     , smos-data-gen
     , sydtest
     , yaml
