Fixed the way periods would be wrong at the beginning or end of the year

--- a/smos-report-gen/smos-report-gen.cabal
+++ b/smos-report-gen/smos-report-gen.cabal
@@ -124,6 +124,7 @@ test-suite smos-report-test
       Smos.Report.LogSpec
       Smos.Report.NextSpec
       Smos.Report.OptParseSpec
+      Smos.Report.PeriodSpec
       Smos.Report.ProjectionSpec
       Smos.Report.ProjectsSpec
       Smos.Report.ReportSpec
