Fix the bug where times would be calculated with the current timezone offset

--- a/smos-docs-site/content/casts/calendar-import.yaml
+++ b/smos-docs-site/content/casts/calendar-import.yaml
@@ -2,6 +2,7 @@ working-dir: ../../demo-workflow
 packages:
 - smos-calendar-import
 - smos-query
+- tzdata
 environment:
   SMOS_CONFIG_FILE: config.yaml
   SMOS_WORKFLOW_DIR: .
