--- a/smos-docs-site/content/casts/work.yaml
+++ b/smos-docs-site/content/casts/work.yaml
@@ -1,6 +1,7 @@
 working-dir: ../../demo-workflow
 packages:
 - smos-query
+- tzdata
 environment:
   SMOS_WORKFLOW_DIR: .
   SMOS_CONFIG_FILE: config.yaml
