--- a/smos/test_resources/scenario/conv-repinged.yaml
+++ b/smos/test_resources/scenario/conv-repinged.yaml
@@ -7,7 +7,7 @@ after:
   state-history:
   - state: DONE
     time: 2020-05-27 09:38:00.919777128000
-- header: Ping again
+- header: Ping
   state-history:
   - state: DONE
     time: 2020-05-27 09:38:00.919777128000
