first version of a sizing report

--- a/smos-sizing/package.yaml
+++ b/smos-sizing/package.yaml
@@ -17,6 +17,7 @@ library:
   build-tools: autoexporter
   dependencies:
     - autodocodec
+    - containers
     - envparse
     - optparse-applicative
     - path
