--- a/smos-sizing/package.yaml
+++ b/smos-sizing/package.yaml
@@ -53,5 +53,7 @@ tests:
     - -Wall
     dependencies:
     - base
+    - genvalidity-sydtest
+    - smos-data-gen
     - smos-sizing
     - sydtest
