--- a/smos-sizing/smos-sizing.cabal
+++ b/smos-sizing/smos-sizing.cabal
@@ -57,7 +57,7 @@ test-suite smos-sizing-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Smos.SizingSpec
+      Smos.Sizing.ReportSpec
       Paths_smos_sizing
   hs-source-dirs:
       test/
@@ -66,6 +66,8 @@ test-suite smos-sizing-test
       sydtest-discover:sydtest-discover
   build-depends:
       base
+    , genvalidity-sydtest
+    , smos-data-gen
     , smos-sizing
     , sydtest
   default-language: Haskell2010
