--- a/smos-sync-client/smos-sync-client.cabal
+++ b/smos-sync-client/smos-sync-client.cabal
@@ -66,6 +66,7 @@ library
     , servant-auth-client
     , servant-client
     , smos-api
+    , smos-cli
     , smos-client
     , smos-data
     , smos-report
