--- a/smos-cli/package.yaml
+++ b/smos-cli/package.yaml
@@ -16,3 +16,20 @@ library:
   - monad-logger
   - password
   - text
+  - validity
+
+tests:
+  smos-cli-test:
+    main: Spec.hs
+    source-dirs: test
+    build-tools: sydtest-discover
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
+    dependencies:
+    - genvalidity-sydtest
+    - smos-cli
+    - sydtest
+
