--- a/smos-cli/smos-cli.cabal
+++ b/smos-cli/smos-cli.cabal
@@ -16,6 +16,7 @@ library
   exposed-modules:
       Smos.CLI
       Smos.CLI.Password
+      Smos.CLI.Prompt
   other-modules:
       Paths_smos_cli
   hs-source-dirs:
@@ -27,4 +28,23 @@ library
     , monad-logger
     , password
     , text
+    , validity
+  default-language: Haskell2010
+
+test-suite smos-cli-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Smos.CLI.PromptSpec
+      Paths_smos_cli
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  build-tool-depends:
+      sydtest-discover:sydtest-discover
+  build-depends:
+      base
+    , genvalidity-sydtest
+    , smos-cli
+    , sydtest
   default-language: Haskell2010
