More the prompts into smos-cli

--- a/smos-cli/smos-cli.cabal
+++ b/smos-cli/smos-cli.cabal
@@ -45,6 +45,7 @@ test-suite smos-cli-test
   build-depends:
       base
     , genvalidity-sydtest
+    , genvalidity-text
     , smos-cli
     , sydtest
   default-language: Haskell2010
