Refactor out certain optparse into smos-cli

--- a/smos-cli/package.yaml
+++ b/smos-cli/package.yaml
@@ -12,9 +12,15 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+  - autodocodec
+  - autodocodec-yaml
   - bytestring
+  - envparse
   - monad-logger
+  - optparse-applicative
   - password
+  - path
+  - path-io
   - text
   - validity
 
