--- a/smos-cli/smos-cli.cabal
+++ b/smos-cli/smos-cli.cabal
@@ -15,6 +15,7 @@ build-type:     Simple
 library
   exposed-modules:
       Smos.CLI
+      Smos.CLI.OptParse
       Smos.CLI.Password
       Smos.CLI.Prompt
   other-modules:
@@ -23,10 +24,16 @@ library
       src/
   ghc-options: -Wall
   build-depends:
-      base
+      autodocodec
+    , autodocodec-yaml
+    , base
     , bytestring
+    , envparse
     , monad-logger
+    , optparse-applicative
     , password
+    , path
+    , path-io
     , text
     , validity
   default-language: Haskell2010
