--- a/smos-query/package.yaml
+++ b/smos-query/package.yaml
@@ -27,6 +27,7 @@ library:
   - safe-coloured-text
   - safe-coloured-text-layout
   - safe-coloured-text-terminfo
+  - smos-cli
   - smos-data
   - smos-report
   - text
