--- a/smos-query/smos-query.cabal
+++ b/smos-query/smos-query.cabal
@@ -58,6 +58,7 @@ library
     , safe-coloured-text
     , safe-coloured-text-layout
     , safe-coloured-text-terminfo
+    , smos-cli
     , smos-data
     , smos-report
     , text
