--- a/smos-scheduler/smos-scheduler.cabal
+++ b/smos-scheduler/smos-scheduler.cabal
@@ -53,6 +53,7 @@ library
     , pretty-relative-time
     , safe
     , safe-coloured-text-terminfo
+    , smos-cli
     , smos-data
     , smos-query
     , smos-report
