Use the same parser prefs everywhere

--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -218,6 +218,7 @@ library
     , smos
     , smos-archive
     , smos-calendar-import
+    , smos-cli
     , smos-client
     , smos-data
     , smos-github
