--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -108,6 +108,7 @@ library
     , servant-client
     , shakespeare
     , smos
+    , smos-cli
     , smos-client
     , smos-sync-client
     , smos-web-style
