--- a/smos-query/package.yaml
+++ b/smos-query/package.yaml
@@ -70,6 +70,7 @@ tests:
     - safe-coloured-text
     - safe-coloured-text-layout
     - safe-coloured-text-layout-gen
+    - smos-cli
     - smos-query
     - smos-report
     - smos-report-gen
