--- a/smos-cli/smos-cli.cabal
+++ b/smos-cli/smos-cli.cabal
@@ -15,6 +15,7 @@ build-type:     Simple
 library
   exposed-modules:
       Smos.CLI
+      Smos.CLI.Colour
       Smos.CLI.OptParse
       Smos.CLI.Password
       Smos.CLI.Prompt
@@ -24,7 +25,8 @@ library
       src/
   ghc-options: -Wall
   build-depends:
-      autodocodec
+      aeson
+    , autodocodec
     , autodocodec-yaml
     , base
     , bytestring
@@ -34,6 +36,8 @@ library
     , password
     , path
     , path-io
+    , safe-coloured-text
+    , safe-coloured-text-layout
     , text
     , validity
   default-language: Haskell2010
