--- a/smos-scheduler/smos-scheduler.cabal
+++ b/smos-scheduler/smos-scheduler.cabal
@@ -114,9 +114,9 @@ test-suite smos-scheduler-test
     , mtl
     , path
     , path-io
+    , smos-cli
     , smos-data
     , smos-data-gen
-    , smos-query
     , smos-report
     , smos-report-gen
     , smos-scheduler
