Refactor data-only formatting into smos-cli

--- a/smos-cli/package.yaml
+++ b/smos-cli/package.yaml
@@ -21,10 +21,12 @@ library:
   - optparse-applicative
   - password
   - path
+  - path-io
   - safe-coloured-text
   - safe-coloured-text-layout
-  - path-io
+  - smos-data
   - text
+  - time
   - validity
 
 tests:
