--- a/smos-github/smos-github.cabal
+++ b/smos-github/smos-github.cabal
@@ -46,10 +46,10 @@ library
     , optparse-applicative
     , path
     , path-io
+    , safe-coloured-text
     , safe-coloured-text-terminfo
     , smos-cli
     , smos-data
-    , smos-query
     , smos-report
     , text
     , time
