--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -32,10 +32,10 @@ library:
     - path-io
     - pretty-relative-time
     - safe
+    - safe-coloured-text
     - safe-coloured-text-terminfo
     - smos-cli
     - smos-data
-    - smos-query
     - smos-report
     - text
     - time
