split out smos-directory-gen

--- a/smos-archive/package.yaml
+++ b/smos-archive/package.yaml
@@ -63,7 +63,7 @@ tests:
     - smos-data
     - smos-data-gen
     - smos-directory
+    - smos-directory-gen
     - smos-report
-    - smos-report-gen
     - sydtest
     - time
