--- a/smos-report-cursor-gen/smos-report-cursor-gen.cabal
+++ b/smos-report-cursor-gen/smos-report-cursor-gen.cabal
@@ -64,6 +64,7 @@ test-suite smos-report-cursor-test
     , genvalidity-sydtest
     , genvalidity-sydtest-lens
     , smos-data-gen
+    , smos-directory-gen
     , smos-report
     , smos-report-cursor
     , smos-report-cursor-gen
