--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -33,7 +33,7 @@ library:
   - smos-client
   - smos-data
   - smos-data-gen
-  - smos-report-gen
+  - smos-directory-gen
   - smos-server
   - smos-sync-client
   - sydtest
@@ -71,8 +71,8 @@ tests:
     - smos-client
     - smos-data
     - smos-data-gen
+    - smos-directory-gen
     - smos-report
-    - smos-report-gen
     - smos-server
     - smos-server-gen
     - sydtest
