--- a/smos-jobhunt/package.yaml
+++ b/smos-jobhunt/package.yaml
@@ -47,6 +47,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     - -Wall
+    - -optP-Wno-nonportable-include-path # For macos
     dependencies:
     - smos-jobhunt
 
