--- a/smos-query/package.yaml
+++ b/smos-query/package.yaml
@@ -66,7 +66,7 @@ tests:
     - path-io
     - smos-query
     - smos-report
-    - smos-report-gen
+    - smos-directory-gen
     - sydtest
     - text
     - yaml
