--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -90,6 +90,7 @@ tests:
     - smos-data
     - smos-data-gen
     - smos-directory
+    - smos-directory-gen
     - smos-report
     - smos-report-gen
     - smos-scheduler
