--- a/stack.yaml
+++ b/stack.yaml
@@ -6,6 +6,7 @@ packages:
 - smos-cursor
 - smos-cursor-gen
 - smos-directory
+- smos-directory-gen
 - smos-report
 - smos-report-gen
 - smos-report-cursor
