--- a/smos-directory-gen/package.yaml
+++ b/smos-directory-gen/package.yaml
@@ -22,6 +22,7 @@ library:
   - genvalidity-dirforest
   - genvalidity-path
   - genvalidity-sydtest
+  - genvalidity-text
   - path
   - path-io
   - smos-data
