--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -111,6 +111,7 @@ library
     , smos-cli
     , smos-client
     , smos-directory
+    , smos-report
     , smos-sync-client
     , smos-web-style
     , stm
