--- a/smos-directory-gen/smos-directory-gen.cabal
+++ b/smos-directory-gen/smos-directory-gen.cabal
@@ -14,6 +14,7 @@ build-type:     Simple
 
 library
   exposed-modules:
+      Smos.Directory.Archive.Gen
       Smos.Directory.Gen
       Smos.Directory.InterestingStore
       Smos.Directory.TestUtils
@@ -46,6 +47,7 @@ test-suite smos-directory-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Smos.Directory.StreamingSpec
       Paths_smos_directory_gen
   hs-source-dirs:
       test/
@@ -54,5 +56,12 @@ test-suite smos-directory-test
       sydtest-discover:sydtest-discover
   build-depends:
       base >=4.9 && <=5
+    , containers
+    , cursor
+    , genvalidity-containers
+    , genvalidity-sydtest
+    , smos-data
+    , smos-data-gen
+    , smos-directory
     , sydtest
   default-language: Haskell2010
