--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -97,6 +97,7 @@ library
     , smos-api
     , smos-cli
     , smos-data
+    , smos-directory
     , smos-report
     , smos-stripe-client
     , template-haskell
