--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -50,6 +50,7 @@ extra-source-files:
     content/changelogs/2022-09-26.markdown
     content/changelogs/2022-11-11.markdown
     content/changelogs/2022-11-15.markdown
+    content/changelogs/2023-03-23.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
